--- a/style/partials/_base.scss
+++ b/style/partials/_base.scss
@@ -7,6 +7,7 @@ $yellow: #fde88e;
 $pink: #edd3f0;
 $purple: #b6c0f8;
 $red: rgb(207, 71, 92);
+$blackish: rgb(23, 25, 18);
 
 @font-face {
 	font-family: 'BebasNeue';
@@ -36,6 +37,17 @@ body {
 	font-family: "Futura";
 	font-size: 20px;
 	line-height: 28px;
+}
+.border-link {
+	border-bottom: solid 2px rgba(0, 0, 0, 0.48);
+	padding-bottom: -2px;
+	text-decoration: none;
+	&:hover,
+	&:focus {
+		color: $blackish;
+		border-color: $blackish;
+		padding-bottom: 2px;
+	}
 }
 .copy--20--bebas {
 	font-family: BebasNeue;
@@ -71,6 +83,7 @@ h2 {
 	line-height: 80px;
 	letter-spacing: -1.5px;
 }
+h5 { font-weight: normal; }
 h6 {
 	color: rgba(0, 0, 0, .48);
 	font-family: BebasNeue;
