--- a/style/partials/_partners.scss
+++ b/style/partials/_partners.scss
@@ -8,6 +8,14 @@
 			margin: 0;
 		}
 	}
+	#_826link-1 {
+		background: url(../assets/826logo-partners@2x.png) no-repeat;
+		background-size: contain;
+		display: block;
+		margin: 0 auto;
+		height: 90px;
+		width: 105px;
+	}
 	.list-section {
 		box-sizing: border-box;
 		margin: 0 auto;
