--- a/style/partials/_financials.scss
+++ b/style/partials/_financials.scss
@@ -3,6 +3,15 @@
 	header {
 		margin-bottom: -60px;
 	}
+	#_826link-1 {
+		background: url(../assets/826logo-financials@2x.png) no-repeat;
+		background-size: contain;
+		display: block;
+		margin: 0 auto;
+		height: 99px;
+		transform: translateX(15px) translateY(5px);
+		width: 115px;
+	}
 }
 #title__financials {
 	max-width: 511px;
